# ShellWe

./: .gitignore  CMakeLists.txt  README.md  main.tf  setup_client.sh  setup_server.sh  variables.tf
server/: CMakeLists.txt
server/src/: main.c  util.c
src/: CMakeLists.txt  client.c  client.h  main.c  pipe.c  run_client.c  run_server.c  server.c  server.h  util.c  util.h
src/client/: CMakeLists.txt  main.c  receiver.c  receiver.h
src/server/: CMakeLists.txt  client_handler.c  client_handler.h  main.c  server.c  server.h
src/tui/: CMakeLists.txt  tui.c  tui_handler.c  tui_handler.h  window_handler.c
src/util/: CMakeLists.txt  util.c  util.h
test/: CMakeLists.txt  test_server.c  test_util.c
